# DiezApp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py  settings.json
src/utils/: conflicts.py  notes.py  pdf_export.py  scroll_divider.py  storage.py  theme.py
src/views/: conflicts_view.py  monthly_summary_view.py  notes_view.py  saved_calculations_view.py  settings_view.py
