[project]
name = "DiezApp"
version = "0.1.0"
description = "Add to calculate the total of a bill"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flet>=0.85.3",
    "fpdf2>=2.8.3",
]

[tool.flet.app]
path = "src"

[tool.flet.android]
# Build only the ARM64 Android variant to keep the APK smaller on modern phones.
target_arch = ["arm64-v8a"]
